- Added extension to wrap resolvers and protect of sync-only executions;

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Jonathan Kim <jkimbo@gmail.com>"]
 python = "^3.7"
 strawberry-graphql = ">=0.87.2"
 graphene = ">=3.0"
+Django = ">=3.2.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
